# resume-agent

./: .cursorrules  .env.example  .gitignore  README.md  pyproject.toml
data/: base_resume.md  raw_thoughts.md  target_jd.txt
output/: tailored_resume.html
src/resume_agent/: __init__.py  context.py  core.py  main.py  model_factory.py  models.py  orchestrator.py  resume_prompts.py  steps.py  textutil.py  utils.py
src/resume_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/resume_agent/prompts/: default.yaml
src/resume_agent/templates/: modern_single_column.html  modern_two_column.html  resume_v1.html  swiss_single_column.html  swiss_two_column.html
src/resume_agent/tools/: __init__.py  critique.py  draft.py  layout_validator.py  refine.py
tests/: test_utils.py
